<resources>
    <string name="app_name">Status Saver &amp; Direct Message for WhatsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sel_cc_enter_wa_no">Select country code and WhatsApp number</string>
    <string name="enter_wa_no">Enter WhatsApp number</string>
    <string name="enter_msg">Enter Message</string>
    <string name="search">Search...</string>
    <string name="send">SEND</string>
    <string name="prefer_business_app">Prefer Business App*</string>
    <string name="sel_from_call_log">Select from recent call logs</string>
    <string name="activity_error_msg">We\'re very sorry that the app has crashed. Please report the details so that we
        can resolve the issue in future.
    </string>
    <string name="toolbar_share">Share</string>
    <string name="toolbar_rate_app">Rate Us</string>
    <string name="toolbar_about">About</string>
    <string name="toolbar_help_improve">Help improve</string>
    <string name="privacy_policy_url">
        http://htmlpreview.github.io/?https://github.com/firefinchdev/status-saver-privacy-policy/blob/master/privacy_policy.html
    </string>
</resources>
